Revert "Prod (#1827)"
This reverts commit 9fe868b937de3b02e76b08d9a982f62b3ff4700e.