@@ -1,8 +1,10 @@
 package greencity.mapping.notification;
 
+import greencity.dto.notification.NotificationPlatformDto;
 import greencity.dto.notification.NotificationTemplateUpdateInfoDto;
 import greencity.dto.notification.NotificationTemplateWithPlatformsUpdateDto;
 import greencity.entity.notifications.NotificationTemplate;
+import java.util.stream.Collectors;
 import org.modelmapper.AbstractConverter;
 import org.springframework.stereotype.Component;
 
@@ -22,8 +24,17 @@ public class NotificationTemplateWithPlatformsUpdateDtoMapper
                 .userCategory(notificationTemplate.getUserCategory())
                 .build())
             .platforms(notificationTemplate.getNotificationPlatforms().stream()
-                .map(NotificationMappers::toNotificationPlatformDto)
-                .toList())
+                .map(platform -> NotificationPlatformDto.builder()
+                    .id(platform.getId())
+                    .receiverType(platform.getNotificationReceiverType())
+                    .nameEn(platform
+                        .getNotificationReceiverType()
+                        .getName())
+                    .bodyUk(platform.getBodyUk())
+                    .bodyEn(platform.getBodyEn())
+                    .status(platform.getNotificationStatus())
+                    .build())
+                .collect(Collectors.toList()))
             .build();
     }
 }
